--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "repository": {
     "url": "https://github.com/kmaida/gatsby-speakerbot"
   },
-  "license": "MIT",
+  "license": "GPL-3.0-or-later",
   "keywords": [
     "slackapi",
     "slackapp",
